# thingking-machine

./: MANIFEST.in  README.md  pyproject.toml
src/name_of_the_machine/: __init__.py  githf.py  machina.yaml
src/thingking_machine/: __init__.py  githf.py  machina.yaml
